--- a/ApiSandbox/wwwroot/index.html
+++ b/ApiSandbox/wwwroot/index.html
@@ -69,7 +69,7 @@
 
     <div class="data-insert">
         <textarea id="weatherForecast">
-
+                    
         </textarea>
     </div>
 
@@ -108,6 +108,7 @@
     </footer>
 </body>
 
+<
 <script src="./lib/jquery/dist/jquery.min.js">
 </script>
 <script>
@@ -118,11 +119,10 @@
     };
 
     $.ajax(settings).done(function (response) {
-        console.log(response);
-        //let textArea = document.querySelectorAll('#weatherForecast')
-        //let textArea = document.getElementById(weatherForecast);
-        $('#weatherForecast').val("The weather for tomorrow should look like this:" + response);
+        //console.log(response);
+        //let textArea = document.querySelectorAll('#weatherForecast');
+        //let textArea = document.getElementById('weatherForecast');
+        $('#weatherForecast').val("The weather for tomorrow should look like this: " + response[0].summary);
     });
 </script>
-
 </html>
