Parse with JSON added

--- a/ApiSandbox/wwwroot/index.html
+++ b/ApiSandbox/wwwroot/index.html
@@ -67,7 +67,7 @@
         </div>
     </div>
 
-    <div class="data-insert">
+    <div class="data-insert d-flex justify-content-center align-items-center">
         <textarea id="weatherForecast">
                     
         </textarea>
