NoAction added for SandBox

--- a/ApiSandbox/wwwroot/index.html
+++ b/ApiSandbox/wwwroot/index.html
@@ -123,6 +123,8 @@
         //let textArea = document.querySelectorAll('#weatherForecast');
         //let textArea = document.getElementById('weatherForecast');
         $('#weatherForecast').val("The weather for tomorrow should look like this: " + response[0].summary);
+        console.log(response.longitude);
+        console.log(response.latitude);
     });
 </script>
 </html>
